--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/sortable": "^9.0.0",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.68.0",
     "@tiptap/extension-bubble-menu": "^2.10.4",
     "@tiptap/extension-color": "^2.10.3",
@@ -32,7 +33,8 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.3.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
