--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.68.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@tiptap/extension-bubble-menu": "^2.10.4",
     "@tiptap/extension-color": "^2.10.3",
     "@tiptap/extension-placeholder": "^2.10.4",
